# MasterThesis-HubLink

./: README.md
Code/: .gitignore  (+2 more)
Code/sqa-system/: .gitattributes  Makefile  pyproject.toml  pytest.ini
Code/sqa-system/data/: README.md
Code/sqa-system/data/configs/dataset_configs/: default_publication_datasets.json
Code/sqa-system/data/configs/evaluator_configs/: default_evaluators.json
Code/sqa-system/data/configs/experiment_configs/: default_experiments.json
Code/sqa-system/data/configs/knowledge_graph_configs/: default_knowledge_graphs.json
Code/sqa-system/data/configs/language_model_configs/: default_llms.json
Code/sqa-system/data/configs/logging_config/: logging_config.yaml
Code/sqa-system/data/configs/pipe_configs/: default_generation_pipes.json
Code/sqa-system/data/configs/pipeline_configs/: default_pipelines.json
Code/sqa-system/data/configs/post_retrieval_configs/: default_post_retrieval_configs.json
Code/sqa-system/data/configs/pre_retrieval_configs/: default_pre_retrieval_configs.json
Code/sqa-system/data/file_paths/: paths.json
Code/sqa-system/experiments/: README.md  evaluator_configs.json  llm_evaluator_configs.json  prepare_data_for_replication.py
Code/sqa-system/experiments/qa_datasets/: README.md  templates.md
Code/sqa-system/notebooks/codereview/: README.md  codereview_huggingface.ipynb  codereview_openai.ipynb
Code/sqa-system/scripts/: README.md  run_basic_evaluation.py  visualize.py
Code/sqa-system/scripts/paper_scrapping/: README.md  combine_exports.py  fulltext_scrapper.py  ieee_paper_downloader.py  springer_scrapper.py
Code/sqa-system/sqa_system/app/: cli_controller.py
Code/sqa-system/sqa_system/experimentation/: experiment_config_builder.py  experiment_runner.py
Code/sqa-system/sqa_system/pipeline/: retrieval_pipeline.py
Code/sqa-system/sqa_system/qa_generator/: __init__.py  csv_classificator.py  qa_generator.py  question_classifier.py
Code/sqa-system/sqa_system/retrieval/: __init__.py
Code/sqa-system/sqa_system/tests/: conftest.py
(+922 files in other folders)
